refactor(agent-web): 重命名Data Agent 为 Decision Agent。（仅包括菜单和国际化文件）

--- a/agent-web/src/i18n/locales/data-agent/en-US.json
+++ b/agent-web/src/i18n/locales/data-agent/en-US.json
@@ -17,7 +17,7 @@
       "name": "Name",
       "nameEmptyError": "Name cannot be empty",
       "namingConventionRule": "Only Chinese/English letters, numbers and underscores are allowed, and cannot start with a number",
-      "namePlaceholder": "Give your Data Agent a name",
+      "namePlaceholder": "Give your Decision Agent a name",
       "profile": "Profile",
       "profileEmptyError": "Profile cannot be empty",
       "profilePlaceholder": "Briefly describe your character or what functions it performs",
@@ -44,17 +44,17 @@
       "finaloutputResultPlaceholder": "Please select the final output result",
       "pleaseSelectFinalOutputResult": "Please select the final output result. To obtain the final result, you need to enter \" ->variableValue \" at the end of the LLM input box.",
       "associatedProduct": "Associated Product",
-      "pleaseSelectAssociatedProduct": "Please select the product this Data Agent belongs to",
+      "pleaseSelectAssociatedProduct": "Please select the product this Decision Agent belongs to",
       "pleaseSelectProduct": "Please select product",
-      "systemAgentConfig": "System Data Agent Configuration",
-      "systemAgentConfigDescription": "Configure whether to act as a System Data Agent",
-      "regularAgent": "Standard Data Agent",
-      "systemAgent": "System Data Agent",
-      "systemAgentHasPerm": "System Data Agents have elevated privileges and special functions",
-      "systemAgentCannotEdit": "System Data Agent configuration cannot be edited",
+      "systemAgentConfig": "System Decision Agent Configuration",
+      "systemAgentConfigDescription": "Configure whether to act as a System Decision Agent",
+      "regularAgent": "Standard Decision Agent",
+      "systemAgent": "System Decision Agent",
+      "systemAgentHasPerm": "System Decision Agents have elevated privileges and special functions",
+      "systemAgentCannotEdit": "System Decision Agent configuration cannot be edited",
       "inputConfig": "Input Configuration",
       "inputConfigTip": "Set the format and constraints for user input",
-      "inputConfigDescription": "Please specify what information the Data Agent should receive",
+      "inputConfigDescription": "Please specify what information the Decision Agent should receive",
       "add": "Add",
       "variableName": "Variable Name",
       "pleaseTypeVariableName": "Please enter the variable name",
@@ -69,13 +69,13 @@
       "toolDataStructure": "Object type, containing session ID, tool name, and parameter list",
       "headerParamDes": "Content of request headers",
       "headerDataStructure": "Object type, containing authorization information and user ID, etc.",
-      "selfConfigDes": "Configuration information of the current Data Agent",
+      "selfConfigDes": "Configuration information of the current Decision Agent",
       "SelfConfigDataStructure": "Object type, containing data source configuration and advanced configurations, etc.",
       "string": "string",
       "file": "file",
       "object": "object",
       "knowledgeSource": "Knowledge Source",
-      "knowledgeSourceTip": "Select the information source for the Data Agent",
+      "knowledgeSourceTip": "Select the information source for the Decision Agent",
       "knowledgeDes": "Determine the information scope required during search",
       "document": "Document",
       "documentRetrievalSettings": "Document Retrieval Settings",
@@ -110,9 +110,9 @@
       "failedToGetEntityList": "Failed to fetch entity list",
       "failedToFetchEntityData": "Failed to fetch entity data",
       "knowledgeNetworkSelectionSuccess": "Knowledge network data selected successfully",
-      "agentCapabilityExtension": "Different skills can be added to expand the Data Agent's capability boundaries and handle more complex tasks.",
+      "agentCapabilityExtension": "Different skills can be added to expand the Decision Agent's capability boundaries and handle more complex tasks.",
       "skill": "Skill",
-      "agentWithHumanIntervention": "Data Agents with human intervention enabled cannot be added as skills",
+      "agentWithHumanIntervention": "Decision Agents with human intervention enabled cannot be added as skills",
       "skillName": "Skill Name",
       "functionDescription": "Feature Description",
       "toolboxDescription": "Toolbox Description",
@@ -133,14 +133,14 @@
       "userDefined": "{User-defined}",
       "dataSourceSettings": "Data Source Settings",
       "useSelfConfiguredDataSource": "Use self-configured data source",
-      "inheritMasterAgent": "Inherit master Data Agent",
+      "inheritMasterAgent": "Inherit master Decision Agent",
       "inheritOnlyDocDataSource": "Inherit document data source only",
       "inheritOnlyGraphDataSource": "Inherit graph data source only",
       "inheritAllDataSources": "Inherit all types of data sources",
       "defaultLLM": "Default LLM",
       "useSelfConfiguredLLM": "Use self-configured LLM",
       "defaultModelConfig": "Default Model Configuration",
-      "setDefaultLLMForAgent": "Set default LLM for this Data Agent",
+      "setDefaultLLMForAgent": "Set default LLM for this Decision Agent",
       "loadingModel": "Loading model...",
       "default": "Default",
       "test": "Test",
@@ -166,13 +166,13 @@
       "frequencyPenalty": "Frequency Penalty frequency_penalty",
       "reduceRepetition": "Reduce the model's tendency to repeat the same words.",
       "longTermMemory": "Long-term Memory",
-      "enableLongTermMemory": "When long-term memory is enabled, the Data Agent will be able to remember and utilize historical conversation information",
-      "enableMemoryFeature": "Once enabled, the Data Agent gains the ability to remember historical conversation content to provide more accurate responses in subsequent dialogues",
-      "longTermMemoryEnabled": "Long-term memory enabled - Data Agent will remember conversation history",
+      "enableLongTermMemory": "When long-term memory is enabled, the Decision Agent will be able to remember and utilize historical conversation information",
+      "enableMemoryFeature": "Once enabled, the Decision Agent gains the ability to remember historical conversation content to provide more accurate responses in subsequent dialogues",
+      "longTermMemoryEnabled": "Long-term memory enabled - Decision Agent will remember conversation history",
       "longTermMemoryNotEditable": "Long-term memory configuration is not editable",
       "longTermMemoryDisabled": "Long-term memory has been disabled",
       "relatedQuestions": "Related Questions",
-      "enableRelatedQuestions": "When enabled, the Data Agent will generate related questions while answering user queries",
+      "enableRelatedQuestions": "When enabled, the Decision Agent will generate related questions while answering user queries",
       "otherExperiences": "Other Experiences",
       "defaultGreeting": "Default Greeting",
       "enterYourGreeting": "Please enter your greeting message…",
@@ -258,16 +258,16 @@
     "selectImportMode": "Select Import Mode",
     "importModePrompt": "Please select import mode:",
     "updateMode": "Update Mode",
-    "updateModeDescription": "Update if Data Agent ID exists, otherwise create new Data Agent.",
+    "updateModeDescription": "Update if Decision Agent ID exists, otherwise create new Decision Agent.",
     "createMode": "Create Mode",
-    "createModeDescription": "Only create new Data Agents, abort import if ID exists.",
+    "createModeDescription": "Only create new Decision Agents, abort import if ID exists.",
     "invalidConfiguration": "Invalid configuration",
-    "invalidAgentConfiguration": "The following Data Agent configurations are invalid and cannot be imported:",
+    "invalidAgentConfiguration": "The following Decision Agent configurations are invalid and cannot be imported:",
     "insufficientPermissions": "Insufficient permissions",
-    "systemAgentNoPermission": "The following are system Data Agents which you cannot create:",
-    "agentIdConflict": "Data Agent ID conflict",
-    "existingAgentIds": "The following Data Agent IDs already exist:",
-    "agentIdConflictInOtherDomain": "The following Data Agent IDs already exist in other business domains:",
+    "systemAgentNoPermission": "The following are system Decision Agents which you cannot create:",
+    "agentIdConflict": "Decision Agent ID conflict",
+    "existingAgentIds": "The following Decision Agent IDs already exist:",
+    "agentIdConflictInOtherDomain": "The following Decision Agent IDs already exist in other business domains:",
     "importFailed": "Import failed",
     "itemCount": "({count} items)",
     "fileSizeExceedsLimit": "File size cannot exceed 10MB, please reselect",
@@ -276,19 +276,19 @@
     "loadFailed": "Load failed",
     "noKnowledgeSourceConfig": "No knowledge source configured",
     "restore": "Restore",
-    "agent": "Data Agent",
+    "agent": "Decision Agent",
     "myCreation": "My Creation",
-    "searchAgentName": "Search Data Agent Name",
+    "searchAgentName": "Search Decision Agent Name",
     "searchResultIsEmpty": "The search result is empty",
     "noTemplate": "No template",
     "searchTemplateName": "Search Template Name",
     "searchApiName": "Search API Name",
-    "exportWithBuiltInAgentRestriction": "Export (Built-in Data Agents Are Not Allowed to Be Exported)",
+    "exportWithBuiltInAgentRestriction": "Export (Built-in Decision Agents Are Not Allowed to Be Exported)",
     "status": "Status",
     "operationSuccess": "Operation Succeeded",
     "publishAsTemplate": "Publish as Template",
     "confirmDeleteAgent": "Are you sure you want to delete \"{name}\"? It cannot be recovered after deletion.",
-    "confirmUnpublishAgent": "After unpublishing, the current Data Agent will be removed from the marketplace and will not be available to others. You can still view and manage it in [My Creations]. Are you sure you want to unpublish?",
+    "confirmUnpublishAgent": "After unpublishing, the current Decision Agent will be removed from the marketplace and will not be available to others. You can still view and manage it in [My Creations]. Are you sure you want to unpublish?",
     "publishSettings": "Publish Settings",
     "category": "Category",
     "pleaseSelectCategory": "Please Select the Belonging Category",
@@ -320,7 +320,7 @@
     "otherExperiences": "Other Experiences",
     "noDefaultOpeningLineSet": "No Default Opening Line Set",
     "noPresetQuestionsSet": "No Preset Questions Set",
-    "publishToDataAgent": "Publish to Data Agent Marketplace",
+    "publishToDataAgent": "Publish to Decision Agent Marketplace",
     "noPublishDescriptionAvailable": "No Publish Description Available",
     "publishPlatform": "Publish Platform",
     "noModelConfigurationAvailable": "No Model Configuration Available",
@@ -374,36 +374,36 @@
     "notAddedToAnySpace": "You have not been added to any space",
     "addMembersToSpace": "Add members to this space",
     "memberManagement": "Member Management",
-    "addAgentToSpace": "Add Data Agent to this space",
-    "agentManagement": "Data Agent Management",
-    "addMembersAndAgentsInWorkspaceToShare": "Add members and Data Agents in the workspace, and members can share these Data Agents.",
+    "addAgentToSpace": "Add Decision Agent to this space",
+    "agentManagement": "Decision Agent Management",
+    "addMembersAndAgentsInWorkspaceToShare": "Add members and Decision Agents in the workspace, and members can share these Decision Agents.",
     "cannotBeEmpty": "Cannot be empty",
     "memberList": "Member List",
     "addMember": "Add Member",
     "addSuccess": "Added Successfully",
     "removeMember": "Remove Member",
     "confirmRemoveMember": "Confirm Member Removal",
-    "removeMemberWarning": "After removal, this member will no longer be able to access this workspace or use the Data Agents within the workspace. Are you sure you want to remove them?",
+    "removeMemberWarning": "After removal, this member will no longer be able to access this workspace or use the Decision Agents within the workspace. Are you sure you want to remove them?",
     "remove": "Remove",
     "removeSuccess": "Removed Successfully",
     "userName": "User Name",
     "additionTime": "Addition Time",
     "noMembersAvailable": "No Members Available",
     "joinSpace": " Join Space",
-    "agentList": "Data Agent List",
-    "addAgent": "Add Data Agent",
-    "noAgentsAvailable": "No Data Agents Available",
+    "agentList": "Decision Agent List",
+    "addAgent": "Add Decision Agent",
+    "noAgentsAvailable": "No Decision Agents Available",
     "addAgentToEmpowerSpace": " to Empower the Space",
     "deselect": "Deselect",
-    "removeAgent": "Remove Data Agent",
-    "confirmRemoveAgent": "Confirm Data Agent Removal",
-    "removeAgentWarning": "After removal, this Data Agent will be removed from this workspace, and members in the workspace will not be able to see or use it. Are you sure you want to remove it?",
-    "deleteSpaceWarning": "After deletion, all members in the space will no longer be able to access the space, and will not be able to use the relevant Data Agents within the space. Are you sure you want to delete it?",
+    "removeAgent": "Remove Decision Agent",
+    "confirmRemoveAgent": "Confirm Decision Agent Removal",
+    "removeAgentWarning": "After removal, this Decision Agent will be removed from this workspace, and members in the workspace will not be able to see or use it. Are you sure you want to remove it?",
+    "deleteSpaceWarning": "After deletion, all members in the space will no longer be able to access the space, and will not be able to use the relevant Decision Agents within the space. Are you sure you want to delete it?",
     "deleteSpaceWithName": "Delete Space \"{name}\"",
     "customSpace": "Custom Space",
-    "selectAgent": "Select Data Agent",
+    "selectAgent": "Select Decision Agent",
     "selectedCount": "({count} selected)",
-    "searchAgent": "Search Data Agent",
+    "searchAgent": "Search Decision Agent",
     "createSuccess": "Created successfully",
     "editSuccess": "Edited successfully",
     "editSpace": "Edit Space",
@@ -416,10 +416,10 @@
     "searchSpace": "Search Space name",
     "cancelPublishTemplateWarning": "After canceling the publication, the current template will be removed from the template market, and others will no longer be able to use it to create new content. Content already created using this template will not be affected, and you can still view and manage it in [My Templates]. Are you sure you want to cancel?",
     "useTemplateToCreate": "Create Using Template",
-    "noAvailableAgentsCurrently": "There are no available Data Agents at present.",
+    "noAvailableAgentsCurrently": "There are no available Decision Agents at present.",
     "notYetCreated": "Not Yet Created",
-    "createNewAgent": "Create New Data Agent",
-    "enterAgentName": "Please enter the Data Agent name",
+    "createNewAgent": "Create New Decision Agent",
+    "enterAgentName": "Please enter the Decision Agent name",
     "enterDescription": "Please enter the description content",
     "selectProduct": "Please select the associated product",
     "skillHasInvalidItems": "Skills contain invalid items, please update the configuration",
@@ -432,8 +432,8 @@
     "configureDocTypeDataSource": "Please configure the document type data source",
     "inputFieldNameDuplicate": "Input field names cannot be duplicated",
     "templateUpdateSuccess": "Template updated successfully!",
-    "agentUpdateSuccess": "Data Agent updated successfully!",
-    "agentCreateSuccess": "Data Agent created successfully!",
+    "agentUpdateSuccess": "Decision Agent updated successfully!",
+    "agentCreateSuccess": "Decision Agent created successfully!",
     "createFailCheckNetworkOrAdmin": "Creation failed: Please check the network connection or contact the administrator",
     "updateFailCheckNetworkOrAdmin": "Update failed: Please check the network connection or contact the administrator",
     "unknownError": "Unknown error",
@@ -462,8 +462,8 @@
     "variableWithName": "${name} Variable",
     "systemBuiltIn": "System Built-in",
     "userInput": "User Input",
-    "builtInAgent": "Built-in Data Agent",
-    "systemAgent": "System Data Agent",
+    "builtInAgent": "Built-in Decision Agent",
+    "systemAgent": "System Decision Agent",
     "specifyResultRange": "Specify Result Range",
     "noSelectableEntities": "No selectable entities available",
     "selectAnyEntityInLeftList": "Select any entity in the left list",
@@ -495,7 +495,7 @@
     "example": "Example",
     "originalData": "Original Data:",
     "taskPlanningTitle": "Task Planning",
-    "taskPlanningDescription": "After activation, the Data Agent will automatically perform intelligent decomposition and step planning for complex requests, execute them one by one, and improve the efficiency and accuracy of task processing",
+    "taskPlanningDescription": "After activation, the Decision Agent will automatically perform intelligent decomposition and step planning for complex requests, execute them one by one, and improve the efficiency and accuracy of task processing",
     "pleaseSelectPublishWay": "Please at least select one publish way"
   }
 }
