--- a/agent-web/src/i18n/locales/data-agent/zh-CN.json
+++ b/agent-web/src/i18n/locales/data-agent/zh-CN.json
@@ -17,7 +17,7 @@
       "name": "名称",
       "nameEmptyError": "名称不能为空",
       "namingConventionRule": "仅支持中英文、数字及下划线，且不能以数字开头",
-      "namePlaceholder": "给你的Data Agent起个名字",
+      "namePlaceholder": "给你的Decision Agent起个名字",
       "profile": "简介",
       "profileEmptyError": "简介不能为空",
       "profilePlaceholder": "请简单描述你的角色，或者完成什么功能",
@@ -44,17 +44,17 @@
       "finaloutputResultPlaceholder": "请选择最终输出结果",
       "pleaseSelectFinalOutputResult": "请选择最终输出结果。最终结果获取，需要在LLM输入框结尾处输入“ ->变量值 ”。",
       "associatedProduct": "所属产品",
-      "pleaseSelectAssociatedProduct": "请选择此Data Agent所属的产品",
+      "pleaseSelectAssociatedProduct": "请选择此Decision Agent所属的产品",
       "pleaseSelectProduct": "请选择产品",
-      "systemAgentConfig": "系统Data Agent配置",
-      "systemAgentConfigDescription": "配置是否作为系统Data Agent",
-      "regularAgent": "普通Data Agent",
-      "systemAgent": "系统Data Agent",
-      "systemAgentHasPerm": "系统Data Agent具有更高的权限和特殊功能",
-      "systemAgentCannotEdit": "系统Data Agent配置不可编辑",
+      "systemAgentConfig": "系统Decision Agent配置",
+      "systemAgentConfigDescription": "配置是否作为系统Decision Agent",
+      "regularAgent": "普通Decision Agent",
+      "systemAgent": "系统Decision Agent",
+      "systemAgentHasPerm": "系统Decision Agent具有更高的权限和特殊功能",
+      "systemAgentCannotEdit": "系统Decision Agent配置不可编辑",
       "inputConfig": "输入配置",
       "inputConfigTip": "设置用户输入的格式和约束条件",
-      "inputConfigDescription": "请说明需要让Data Agent接收哪些信息",
+      "inputConfigDescription": "请说明需要让Decision Agent接收哪些信息",
       "add": "添加",
       "variableName": "变量名称",
       "pleaseTypeVariableName": "请输入变量名称",
@@ -69,13 +69,13 @@
       "toolDataStructure": "对象类型，包含会话ID、工具名称和参数列表",
       "headerParamDes": "请求头的内容",
       "headerDataStructure": "对象类型，包含授权信息和用户ID等",
-      "selfConfigDes": "当前Data Agent的配置信息",
+      "selfConfigDes": "当前Decision Agent的配置信息",
       "SelfConfigDataStructure": "对象类型，包含数据源配置和高级配置等",
       "string": "文本",
       "file": "文件",
       "object": "对象",
       "knowledgeSource": "知识来源",
-      "knowledgeSourceTip": "选择Data Agent获取信息的来源",
+      "knowledgeSourceTip": "选择Decision Agent获取信息的来源",
       "knowledgeDes": "确定搜索过程中需要的信息范围",
       "document": "文档",
       "documentRetrievalSettings": "文档召回设置",
@@ -110,9 +110,9 @@
       "failedToGetEntityList": "获取实体列表失败",
       "failedToFetchEntityData": "获取实体数据失败",
       "knowledgeNetworkSelectionSuccess": "知识网络数据选择成功",
-      "agentCapabilityExtension": "可添加不同的技能以扩展Data Agent的能力边界，处理更复杂的任务。",
+      "agentCapabilityExtension": "可添加不同的技能以扩展Decision Agent的能力边界，处理更复杂的任务。",
       "skill": "技能",
-      "agentWithHumanIntervention": "开启了人工干预功能的Data Agent无法作为技能被添加",
+      "agentWithHumanIntervention": "开启了人工干预功能的Decision Agent无法作为技能被添加",
       "skillName": "技能名称",
       "functionDescription": "功能描述",
       "toolboxDescription": "工具箱描述",
@@ -133,14 +133,14 @@
       "userDefined": "{用户自定义}",
       "dataSourceSettings": "数据源设置",
       "useSelfConfiguredDataSource": "使用自身配置的数据源",
-      "inheritMasterAgent": "继承主Data Agent",
+      "inheritMasterAgent": "继承主Decision Agent",
       "inheritOnlyDocDataSource": "仅继承文档数据源",
       "inheritOnlyGraphDataSource": "仅继承图谱数据源",
       "inheritAllDataSources": "继承所有类型的数据源",
       "defaultLLM": "默认大模型",
       "useSelfConfiguredLLM": "使用自身配置的大模型",
       "defaultModelConfig": "默认模型配置",
-      "setDefaultLLMForAgent": "设置此Data Agent使用的默认大语言模型",
+      "setDefaultLLMForAgent": "设置此Decision Agent使用的默认大语言模型",
       "loadingModel": "加载模型中...",
       "default": "默认",
       "test": "测试",
@@ -166,13 +166,13 @@
       "frequencyPenalty": "频率惩罚度 frequency_penalty",
       "reduceRepetition": "减少模型重复使用相同词语的倾向。",
       "longTermMemory": "长期记忆",
-      "enableLongTermMemory": "启用长期记忆后，Data Agent将能够记住和利用历史对话信息",
-      "enableMemoryFeature": "启用后，Data Agent具备记住历史对话内容的能力，以便在后续对话中提供更准确的回答",
-      "longTermMemoryEnabled": "长期记忆功能已开启，Data Agent将记住对话历史",
+      "enableLongTermMemory": "启用长期记忆后，Decision Agent将能够记住和利用历史对话信息",
+      "enableMemoryFeature": "启用后，Decision Agent具备记住历史对话内容的能力，以便在后续对话中提供更准确的回答",
+      "longTermMemoryEnabled": "长期记忆功能已开启，Decision Agent将记住对话历史",
       "longTermMemoryNotEditable": "长期记忆配置不可编辑",
       "longTermMemoryDisabled": "长期记忆功能已关闭",
       "relatedQuestions": "相关问题",
-      "enableRelatedQuestions": "启用后，Data Agent会在回答用户问题时同时生成相关问题",
+      "enableRelatedQuestions": "启用后，Decision Agent会在回答用户问题时同时生成相关问题",
       "otherExperiences": "其他体验",
       "defaultGreeting": "默认开场白",
       "enterYourGreeting": "请输入您的开场白…",
@@ -258,16 +258,16 @@
     "selectImportMode": "选择导入模式",
     "importModePrompt": "请选择导入模式：",
     "updateMode": "更新模式",
-    "updateModeDescription": "若Data Agent标识已存在则更新，否则创建新Data Agent。",
+    "updateModeDescription": "若Decision Agent标识已存在则更新，否则创建新Decision Agent。",
     "createMode": "创建模式",
-    "createModeDescription": "仅创建新Data Agent，若标识已存在则终止导入。",
+    "createModeDescription": "仅创建新Decision Agent，若标识已存在则终止导入。",
     "invalidConfiguration": "配置无效",
-    "invalidAgentConfiguration": "以下Data Agent配置错误，无法导入：",
+    "invalidAgentConfiguration": "以下Decision Agent配置错误，无法导入：",
     "insufficientPermissions": "权限不足",
-    "systemAgentNoPermission": "以下为系统Data Agent，您无权创建：",
-    "agentIdConflict": "Data Agent标识冲突",
-    "existingAgentIds": "以下Data Agent标识已存在：",
-    "agentIdConflictInOtherDomain": "以下Data Agent标识已存在于其他业务域：",
+    "systemAgentNoPermission": "以下为系统Decision Agent，您无权创建：",
+    "agentIdConflict": "Decision Agent标识冲突",
+    "existingAgentIds": "以下Decision Agent标识已存在：",
+    "agentIdConflictInOtherDomain": "以下Decision Agent标识已存在于其他业务域：",
     "importFailed": "导入失败",
     "itemCount": "（{count}项）",
     "fileSizeExceedsLimit": "文件大小不能超过 10MB，请重新选择",
@@ -276,19 +276,19 @@
     "loadFailed": "加载失败",
     "noKnowledgeSourceConfig": "暂无知识来源配置",
     "restore": "还原",
-    "agent": "Data Agent",
+    "agent": "Decision Agent",
     "myCreation": "我的创建",
-    "searchAgentName": "搜索Data Agent名称",
+    "searchAgentName": "搜索Decision Agent名称",
     "searchResultIsEmpty": "搜索结果为空",
     "noTemplate": "暂无模板",
     "searchTemplateName": "搜索模板名称",
     "searchApiName": "搜索 API 名称",
-    "exportWithBuiltInAgentRestriction": "导出（内置Data Agent不允许导出）",
+    "exportWithBuiltInAgentRestriction": "导出（内置Decision Agent不允许导出）",
     "status": "状态",
     "operationSuccess": "操作成功",
     "publishAsTemplate": "发布为模板",
     "confirmDeleteAgent": "您确定要删除“{name}”吗？删除后将无法恢复。",
-    "confirmUnpublishAgent": "取消发布后，当前Data Agent将从市场下架，其他人无法使用。您仍可在【我的创建】中查看和管理。确定取消吗？",
+    "confirmUnpublishAgent": "取消发布后，当前Decision Agent将从市场下架，其他人无法使用。您仍可在【我的创建】中查看和管理。确定取消吗？",
     "publishSettings": "发布设置",
     "category": "分类",
     "pleaseSelectCategory": "请选择所属分类",
@@ -320,7 +320,7 @@
     "otherExperiences": "其它体验",
     "noDefaultOpeningLineSet": "未设置默认开场白",
     "noPresetQuestionsSet": "未设置预设问题",
-    "publishToDataAgent": "发布到Data Agent市场",
+    "publishToDataAgent": "发布到Decision Agent市场",
     "noPublishDescriptionAvailable": "暂无发布描述",
     "publishPlatform": "发布平台",
     "noModelConfigurationAvailable": "暂无模型配置",
@@ -374,36 +374,36 @@
     "notAddedToAnySpace": "您未被添加至任何空间",
     "addMembersToSpace": "为此空间添加成员",
     "memberManagement": "成员管理",
-    "addAgentToSpace": "为此空间添加Data Agent",
-    "agentManagement": "Data Agent管理",
-    "addMembersAndAgentsInWorkspaceToShare": "在工作空间添加成员与Data Agent，成员即可共享这些Data Agent。",
+    "addAgentToSpace": "为此空间添加Decision Agent",
+    "agentManagement": "Decision Agent管理",
+    "addMembersAndAgentsInWorkspaceToShare": "在工作空间添加成员与Decision Agent，成员即可共享这些Decision Agent。",
     "cannotBeEmpty": "不可为空",
     "memberList": "成员列表",
     "addMember": "添加成员",
     "addSuccess": "添加成功",
     "removeMember": "移除成员",
     "confirmRemoveMember": "确认移除成员",
-    "removeMemberWarning": "移除后，该成员将无法访问此工作空间及使用空间内的Data Agent。确定移除吗？",
+    "removeMemberWarning": "移除后，该成员将无法访问此工作空间及使用空间内的Decision Agent。确定移除吗？",
     "remove": "移除",
     "removeSuccess": "移除成功",
     "userName": "用户名",
     "additionTime": "添加时间",
     "noMembersAvailable": "暂无成员",
     "joinSpace": "加入空间",
-    "agentList": "Data Agent列表",
-    "addAgent": "添加Data Agent",
-    "noAgentsAvailable": "暂无Data Agent",
+    "agentList": "Decision Agent列表",
+    "addAgent": "添加Decision Agent",
+    "noAgentsAvailable": "暂无Decision Agent",
     "addAgentToEmpowerSpace": "，为空间赋能",
     "deselect": "取消选中",
-    "removeAgent": "移除Data Agent",
-    "confirmRemoveAgent": "确认移除Data Agent",
-    "removeAgentWarning": "移除后，该Data Agent将从本空间移除，空间内的成员不可见且无法使用。确定移除吗？",
-    "deleteSpaceWarning": "删除后，空间内的所有成员将无法访问该空间，且在该空间内无法使用相关Data Agent。确定删除吗？",
+    "removeAgent": "移除Decision Agent",
+    "confirmRemoveAgent": "确认移除Decision Agent",
+    "removeAgentWarning": "移除后，该Decision Agent将从本空间移除，空间内的成员不可见且无法使用。确定移除吗？",
+    "deleteSpaceWarning": "删除后，空间内的所有成员将无法访问该空间，且在该空间内无法使用相关Decision Agent。确定删除吗？",
     "deleteSpaceWithName": "删除空间“{name}”",
     "customSpace": "自定义空间",
-    "selectAgent": "选择Data Agent",
+    "selectAgent": "选择Decision Agent",
     "selectedCount": "(已选{count}项)",
-    "searchAgent": "搜索Data Agent",
+    "searchAgent": "搜索Decision Agent",
     "createSuccess": "新建成功",
     "editSuccess": "编辑成功",
     "editSpace": "编辑空间",
@@ -416,10 +416,10 @@
     "searchSpace": "搜索空间名称",
     "cancelPublishTemplateWarning": "取消发布后，当前模板将从模板市场下架，其他人无法再使用它创建新内容。已使用此模板创建的内容不会受影响，您仍可在【我的模板】中查看和管理。确定取消吗？",
     "useTemplateToCreate": "使用模板创建",
-    "noAvailableAgentsCurrently": "当前没有可用的Data Agent",
+    "noAvailableAgentsCurrently": "当前没有可用的Decision Agent",
     "notYetCreated": "暂无创建",
-    "createNewAgent": "新建Data Agent",
-    "enterAgentName": "请输入Data Agent名称",
+    "createNewAgent": "新建Decision Agent",
+    "enterAgentName": "请输入Decision Agent名称",
     "enterDescription": "请输入简介内容",
     "selectProduct": "请选择所属产品",
     "skillHasInvalidItems": "技能包含无效项，请更新配置",
@@ -432,8 +432,8 @@
     "configureDocTypeDataSource": "请配置文档类型数据源",
     "inputFieldNameDuplicate": "输入字段名称不能重复",
     "templateUpdateSuccess": "模板更新成功！",
-    "agentUpdateSuccess": "Data Agent更新成功！",
-    "agentCreateSuccess": "Data Agent创建成功！",
+    "agentUpdateSuccess": "Decision Agent更新成功！",
+    "agentCreateSuccess": "Decision Agent创建成功！",
     "createFailCheckNetworkOrAdmin": "创建失败：请检查网络连接或联系管理员",
     "updateFailCheckNetworkOrAdmin": "更新失败：请检查网络连接或联系管理员",
     "unknownError": "未知错误",
@@ -462,8 +462,8 @@
     "variableWithName": "{name}变量",
     "systemBuiltIn": "系统内置",
     "userInput": "用户输入",
-    "builtInAgent": "内置Data Agent",
-    "systemAgent": "系统Data Agent",
+    "builtInAgent": "内置Decision Agent",
+    "systemAgent": "系统Decision Agent",
     "specifyResultRange": "指定结果范围",
     "noSelectableEntities": "暂无可选择的实体",
     "selectAnyEntityInLeftList": "在左侧列表中选择任意实体",
@@ -495,7 +495,7 @@
     "example": "示例",
     "originalData": "原数据：",
     "taskPlanningTitle": "任务规划",
-    "taskPlanningDescription": "启用后，Data Agent将自动对复杂请求进行智能拆解与步骤规划，逐一执行，提升处理任务的效率和准确性",
+    "taskPlanningDescription": "启用后，Decision Agent将自动对复杂请求进行智能拆解与步骤规划，逐一执行，提升处理任务的效率和准确性",
     "pleaseSelectPublishWay": "请至少选择一种发布方式"
   }
 }
