--- a/agent-web/src/i18n/locales/data-agent/zh-TW.json
+++ b/agent-web/src/i18n/locales/data-agent/zh-TW.json
@@ -17,7 +17,7 @@
       "name": "名稱",
       "nameEmptyError": "名稱不能為空",
       "namingConventionRule": "僅支援中英文、數字及底線，且不能以數字開頭",
-      "namePlaceholder": "給你的Data Agent起個名字",
+      "namePlaceholder": "給你的Decision Agent起個名字",
       "profile": "簡介",
       "profileEmptyError": "簡介不能為空",
       "profilePlaceholder": "請簡單描述你的角色，或者完成什麼功能",
@@ -44,17 +44,17 @@
       "finaloutputResultPlaceholder": "請選擇最終輸出結果",
       "pleaseSelectFinalOutputResult": "請選擇最終輸出結果。最終結果獲取，需要在LLM輸入框結尾處輸入“ ->變量值 ”。",
       "associatedProduct": "所屬產品",
-      "pleaseSelectAssociatedProduct": "請選擇此Data Agent所屬的產品",
+      "pleaseSelectAssociatedProduct": "請選擇此Decision Agent所屬的產品",
       "pleaseSelectProduct": "請選擇產品",
-      "systemAgentConfig": "系統Data Agent配置",
-      "systemAgentConfigDescription": "配置是否作為系統Data Agent",
-      "regularAgent": "普通Data Agent",
-      "systemAgent": "系統Data Agent",
-      "systemAgentHasPerm": "系統Data Agent具有更高的權限和特殊功能",
-      "systemAgentCannotEdit": "系統Data Agent配置不可編輯",
+      "systemAgentConfig": "系統Decision Agent配置",
+      "systemAgentConfigDescription": "配置是否作為系統Decision Agent",
+      "regularAgent": "普通Decision Agent",
+      "systemAgent": "系統Decision Agent",
+      "systemAgentHasPerm": "系統Decision Agent具有更高的權限和特殊功能",
+      "systemAgentCannotEdit": "系統Decision Agent配置不可編輯",
       "inputConfig": "輸入配置",
       "inputConfigTip": "設置用戶輸入的格式和約束條件",
-      "inputConfigDescription": "請說明需要讓Data Agent接收哪些資訊",
+      "inputConfigDescription": "請說明需要讓Decision Agent接收哪些資訊",
       "add": "新增",
       "variableName": "變量名稱",
       "pleaseTypeVariableName": "請輸入變量名稱",
@@ -69,13 +69,13 @@
       "toolDataStructure": "物件類型，包含會話ID、工具名稱和參數列表",
       "headerParamDes": "請求標頭的內容",
       "headerDataStructure": "物件類型，包含授權資訊和使用者ID等",
-      "selfConfigDes": "當前Data Agent的配置資訊",
+      "selfConfigDes": "當前Decision Agent的配置資訊",
       "SelfConfigDataStructure": "物件類型，包含資料源配置和高級配置等",
       "string": "文字",
       "file": "檔案",
       "object": "物件",
       "knowledgeSource": "知識來源",
-      "knowledgeSourceTip": "選擇Data Agent獲取信息的來源",
+      "knowledgeSourceTip": "選擇Decision Agent獲取信息的來源",
       "knowledgeDes": "確定搜索過程中需要的信息範圍",
       "document": "文檔",
       "documentRetrievalSettings": "文檔召回設置",
@@ -110,9 +110,9 @@
       "failedToGetEntityList": "獲取實體列表失敗",
       "failedToFetchEntityData": "獲取實體資料失敗",
       "knowledgeNetworkSelectionSuccess": "知識網絡數據選擇成功",
-      "agentCapabilityExtension": "可添加不同的技能以擴展Data Agent的能力邊界，處理更複雜的任務。",
+      "agentCapabilityExtension": "可添加不同的技能以擴展Decision Agent的能力邊界，處理更複雜的任務。",
       "skill": "技能",
-      "agentWithHumanIntervention": "開啟了人工干預功能的Data Agent無法作為技能被添加",
+      "agentWithHumanIntervention": "開啟了人工干預功能的Decision Agent無法作為技能被添加",
       "skillName": "技能名稱",
       "functionDescription": "功能描述",
       "toolboxDescription": "工具箱描述",
@@ -133,14 +133,14 @@
       "userDefined": "{使用者自訂}",
       "dataSourceSettings": "資料源設定",
       "useSelfConfiguredDataSource": "使用自身設定的資料源",
-      "inheritMasterAgent": "繼承主Data Agent",
+      "inheritMasterAgent": "繼承主Decision Agent",
       "inheritOnlyDocDataSource": "僅繼承文件資料源",
       "inheritOnlyGraphDataSource": "僅繼承圖譜資料源",
       "inheritAllDataSources": "繼承所有類型的資料源",
       "defaultLLM": "預設大模型",
       "useSelfConfiguredLLM": "使用自身設定的大模型",
       "defaultModelConfig": "預設模型配置",
-      "setDefaultLLMForAgent": "設定此Data Agent使用的預設大語言模型",
+      "setDefaultLLMForAgent": "設定此Decision Agent使用的預設大語言模型",
       "loadingModel": "載入模型中...",
       "default": "預設",
       "test": "測試",
@@ -166,13 +166,13 @@
       "frequencyPenalty": "頻率懲罰度 frequency_penalty",
       "reduceRepetition": "減少模型重複使用相同詞語的傾向。",
       "longTermMemory": "長期記憶",
-      "enableLongTermMemory": "啟用長期記憶後，Data Agent將能夠記住和利用歷史對話信息",
-      "enableMemoryFeature": "啟用後，Data Agent具備記住歷史對話內容的能力，以便在後續對話中提供更準確的回答",
-      "longTermMemoryEnabled": "長期記憶功能已開啟，Data Agent將記住對話歷史",
+      "enableLongTermMemory": "啟用長期記憶後，Decision Agent將能夠記住和利用歷史對話信息",
+      "enableMemoryFeature": "啟用後，Decision Agent具備記住歷史對話內容的能力，以便在後續對話中提供更準確的回答",
+      "longTermMemoryEnabled": "長期記憶功能已開啟，Decision Agent將記住對話歷史",
       "longTermMemoryNotEditable": "長期記憶配置不可編輯",
       "longTermMemoryDisabled": "長期記憶功能已關閉",
       "relatedQuestions": "相關問題",
-      "enableRelatedQuestions": "啟用後，Data Agent會在回答用戶問題時同時生成相關問題",
+      "enableRelatedQuestions": "啟用後，Decision Agent會在回答用戶問題時同時生成相關問題",
       "otherExperiences": "其他體驗",
       "defaultGreeting": "默認開場白",
       "enterYourGreeting": "請輸入您的開場白…",
@@ -258,16 +258,16 @@
     "selectImportMode": "選擇導入模式",
     "importModePrompt": "請選擇導入模式：",
     "updateMode": "更新模式",
-    "updateModeDescription": "若Data Agent標識已存在則更新，否則創建新Data Agent。",
+    "updateModeDescription": "若Decision Agent標識已存在則更新，否則創建新Decision Agent。",
     "createMode": "創建模式",
-    "createModeDescription": "僅創建新Data Agent，若標識已存在則終止導入。",
+    "createModeDescription": "僅創建新Decision Agent，若標識已存在則終止導入。",
     "invalidConfiguration": "配置無效",
-    "invalidAgentConfiguration": "以下Data Agent配置錯誤，無法導入：",
+    "invalidAgentConfiguration": "以下Decision Agent配置錯誤，無法導入：",
     "insufficientPermissions": "權限不足",
-    "systemAgentNoPermission": "以下為系統Data Agent，您無權創建：",
-    "agentIdConflict": "Data Agent標識衝突",
-    "existingAgentIds": "以下Data Agent標識已存在：",
-    "agentIdConflictInOtherDomain": "以下Data Agent標識已存在於其他業務域：",
+    "systemAgentNoPermission": "以下為系統Decision Agent，您無權創建：",
+    "agentIdConflict": "Decision Agent標識衝突",
+    "existingAgentIds": "以下Decision Agent標識已存在：",
+    "agentIdConflictInOtherDomain": "以下Decision Agent標識已存在於其他業務域：",
     "importFailed": "導入失敗",
     "itemCount": "（{count}項）",
     "fileSizeExceedsLimit": "文件大小不能超過 10MB，請重新選擇",
@@ -276,19 +276,19 @@
     "loadFailed": "加載失敗",
     "noKnowledgeSourceConfig": "暫無知識來源配置",
     "restore": "還原",
-    "agent": "Data Agent",
+    "agent": "Decision Agent",
     "myCreation": "我的建立",
-    "searchAgentName": "搜索Data Agent名稱",
+    "searchAgentName": "搜索Decision Agent名稱",
     "searchResultIsEmpty": "搜索結果為空",
     "noTemplate": "暫無模板",
     "searchTemplateName": "搜索模板名稱",
     "searchApiName": "搜索 API 名稱",
-    "exportWithBuiltInAgentRestriction": "匯出（內置Data Agent不允許匯出）",
+    "exportWithBuiltInAgentRestriction": "匯出（內置Decision Agent不允許匯出）",
     "status": "狀態",
     "operationSuccess": "操作成功",
     "publishAsTemplate": "發布為模板",
     "confirmDeleteAgent": "您確定要刪除“{name}”嗎？刪除後將無法恢復。",
-    "confirmUnpublishAgent": "取消發布後，當前Data Agent將從市場下架，其他人無法使用。您仍可在【我的建立】中查看和管理。確定取消嗎？",
+    "confirmUnpublishAgent": "取消發布後，當前Decision Agent將從市場下架，其他人無法使用。您仍可在【我的建立】中查看和管理。確定取消嗎？",
     "publishSettings": "發布設定",
     "category": "分類",
     "pleaseSelectCategory": "請選擇所屬分類",
@@ -320,7 +320,7 @@
     "otherExperiences": "其它體驗",
     "noDefaultOpeningLineSet": "未設定預設開場白",
     "noPresetQuestionsSet": "未設定預設問題",
-    "publishToDataAgent": "發佈到Data Agent市場",
+    "publishToDataAgent": "發佈到Decision Agent市場",
     "noPublishDescriptionAvailable": "暫無發布描述",
     "publishPlatform": "發布平台",
     "noModelConfigurationAvailable": "暫無模型設定",
@@ -374,36 +374,36 @@
     "notAddedToAnySpace": "您未被新增至任何空間",
     "addMembersToSpace": "為此空間新增成員",
     "memberManagement": "成員管理",
-    "addAgentToSpace": "為此空間新增Data Agent",
-    "agentManagement": "Data Agent管理",
-    "addMembersAndAgentsInWorkspaceToShare": "在工作空間新增成員與Data Agent，成員即可共用這些Data Agent。",
+    "addAgentToSpace": "為此空間新增Decision Agent",
+    "agentManagement": "Decision Agent管理",
+    "addMembersAndAgentsInWorkspaceToShare": "在工作空間新增成員與Decision Agent，成員即可共用這些Decision Agent。",
     "cannotBeEmpty": "不可為空",
     "memberList": "成員列表",
     "addMember": "新增成員",
     "addSuccess": "新增成功",
     "removeMember": "移除成員",
     "confirmRemoveMember": "確認移除成員",
-    "removeMemberWarning": "移除後，該成員將無法存取此工作空間及使用空間內的Data Agent。確定移除嗎？",
+    "removeMemberWarning": "移除後，該成員將無法存取此工作空間及使用空間內的Decision Agent。確定移除嗎？",
     "remove": "移除",
     "removeSuccess": "移除成功",
     "userName": "使用者名稱",
     "additionTime": "新增時間",
     "noMembersAvailable": "暫無成員",
     "joinSpace": "加入空間",
-    "agentList": "Data Agent列表",
-    "addAgent": "新增Data Agent",
-    "noAgentsAvailable": "暫無Data Agent",
+    "agentList": "Decision Agent列表",
+    "addAgent": "新增Decision Agent",
+    "noAgentsAvailable": "暫無Decision Agent",
     "addAgentToEmpowerSpace": "，為空間賦能",
     "deselect": "取消選取",
-    "removeAgent": "移除Data Agent",
-    "confirmRemoveAgent": "確認移除Data Agent",
-    "removeAgentWarning": "移除後，該Data Agent將從本空間移除，空間內的成員不可見且無法使用。確定移除嗎？",
-    "deleteSpaceWarning": "刪除後，空間內的所有成員將無法存取該空間，且在該空間內無法使用相關Data Agent。確定刪除嗎？",
+    "removeAgent": "移除Decision Agent",
+    "confirmRemoveAgent": "確認移除Decision Agent",
+    "removeAgentWarning": "移除後，該Decision Agent將從本空間移除，空間內的成員不可見且無法使用。確定移除嗎？",
+    "deleteSpaceWarning": "刪除後，空間內的所有成員將無法存取該空間，且在該空間內無法使用相關Decision Agent。確定刪除嗎？",
     "deleteSpaceWithName": "刪除空間“{name}”",
     "customSpace": "自定義空間",
-    "selectAgent": "選擇Data Agent",
+    "selectAgent": "選擇Decision Agent",
     "selectedCount": "(已選{count}項)",
-    "searchAgent": "搜尋Data Agent",
+    "searchAgent": "搜尋Decision Agent",
     "createSuccess": "建立成功",
     "editSuccess": "編輯成功",
     "editSpace": "編輯空間",
@@ -416,10 +416,10 @@
     "searchSpace": "搜尋空間名稱",
     "cancelPublishTemplateWarning": "取消發布後，目前模板將從模板市場下架，其他人無法再使用它建立新內容。已使用此模板建立的內容不會受影響，您仍可在【我的模板】中檢視和管理。確定取消嗎？",
     "useTemplateToCreate": "使用模板建立",
-    "noAvailableAgentsCurrently": "目前沒有可用的Data Agent",
+    "noAvailableAgentsCurrently": "目前沒有可用的Decision Agent",
     "notYetCreated": "暫無建立",
-    "createNewAgent": "新建Data Agent",
-    "enterAgentName": "請輸入Data Agent名稱",
+    "createNewAgent": "新建Decision Agent",
+    "enterAgentName": "請輸入Decision Agent名稱",
     "enterDescription": "請輸入簡介內容",
     "selectProduct": "請選擇所屬產品",
     "skillHasInvalidItems": "技能包含無效項，請更新設定",
@@ -432,8 +432,8 @@
     "configureDocTypeDataSource": "請設定文件類型資料來源",
     "inputFieldNameDuplicate": "輸入欄位名稱不能重複",
     "templateUpdateSuccess": "模板更新成功！",
-    "agentUpdateSuccess": "Data Agent更新成功！",
-    "agentCreateSuccess": "Data Agent建立成功！",
+    "agentUpdateSuccess": "Decision Agent更新成功！",
+    "agentCreateSuccess": "Decision Agent建立成功！",
     "createFailCheckNetworkOrAdmin": "建立失敗：請檢查網路連線或聯繫管理員",
     "updateFailCheckNetworkOrAdmin": "更新失敗：請檢查網路連線或聯繫管理員",
     "unknownError": "未知錯誤",
@@ -462,8 +462,8 @@
     "variableWithName": "${name}變數",
     "systemBuiltIn": "系統內置",
     "userInput": "使用者輸入",
-    "builtInAgent": "內置Data Agent",
-    "systemAgent": "系統Data Agent",
+    "builtInAgent": "內置Decision Agent",
+    "systemAgent": "系統Decision Agent",
     "specifyResultRange": "指定結果範圍",
     "noSelectableEntities": "暫無可選擇的實體",
     "selectAnyEntityInLeftList": "在左側清單中選擇任意實體",
@@ -495,7 +495,7 @@
     "example": "範例",
     "originalData": "原始數據：",
     "taskPlanningTitle": "任務規劃",
-    "taskPlanningDescription": "啟用後，Data Agent將自動對複雜請求進行智慧拆解與步驟規劃，逐一執行，提升處理任務的效率和準確性",
+    "taskPlanningDescription": "啟用後，Decision Agent將自動對複雜請求進行智慧拆解與步驟規劃，逐一執行，提升處理任務的效率和準確性",
     "pleaseSelectPublishWay": "請至少選擇一種發布方式"
   }
 }
